Archive2/99/6a5c3ae668bcf1/output
main.cpp: In function ‘int main()’:
main.cpp:13:7: error: cannot declare variable ‘a’ to be of abstract type ‘A’
     A a;
       ^
main.cpp:3:7: note:   because the following virtual functions are pure within ‘A’:
 class A {
       ^
main.cpp:8:6: note: 	virtual void A::f()
 void A::f() {
      ^
